# AgentLocate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent_locate/: __init__.py  codegen.py  image_utils.py  locator.py  schema.py  server.py
agent_locate/backends/: __init__.py  base.py  locateanything.py  mock.py  remote_api.py
agent_locate/exporters/: __init__.py  coco.py  yolo.py
agent_locate/integrations/: __init__.py  langchain.py
docs/: langchain.md  license-note.md  publishing.md  quickstart.md  tutorial.en.md  tutorial.zh-CN.md
examples/: basic_locate.py  drissionpage_click.py  fastapi_client.py  langchain_tool.py  local_locateanything_cpu.py
tests/: test_core.py
