[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-locate"
version = "0.1.0"
description = "Natural-language visual grounding SDK for AI agents, RPA, GUI automation, and data annotation."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "AgentLocate Contributors" }]
keywords = ["visual-grounding", "ai-agent", "rpa", "gui-automation", "langchain", "bbox"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.25",
  "pydantic>=2.5",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
langchain = ["langchain-core>=0.2"]
local = ["pillow>=10"]
locateanything = [
  "accelerate>=1.13",
  "decord>=0.6",
  "lmdb>=1.7",
  "opencv-python-headless>=4.11",
  "peft>=0.19",
  "pillow>=11.1",
  "torch>=2.6",
  "torchvision>=0.21",
  "transformers>=4.57.1",
]
dev = ["pytest>=8", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/Xywdmgs/AgentLocate"
Repository = "https://github.com/Xywdmgs/AgentLocate"
Documentation = "https://github.com/Xywdmgs/AgentLocate/tree/main/docs"
Issues = "https://github.com/Xywdmgs/AgentLocate/issues"

[project.scripts]
agent-locate-server = "agent_locate.server:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_locate"]

[tool.ruff]
line-length = 100
target-version = "py39"
